Informações sobre os integrantes

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
       Teste e Manutenção de Software
     	============================
 
-Plano de Gerencia de Configuração - Puc Minas Barreiro - 6º Barreiro 
+TDD - Puc Minas Barreiro - 6º Barreiro 
 
 Integrantes:
 
